# blossom-backend-rs

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.example  README.md  Rocket.example.toml  cargo-config.toml  docker-compose.example.yaml  docker-compose.yaml
.github/workflows/: rust.yml
account/: Cargo.toml
account/src/: guards.rs  lib.rs  routes.rs  validators.rs
account/src/auth/: jwt.rs
email/: Cargo.toml
email/src/: lib.rs
entity/: Cargo.toml
entity/src/: image.rs  person.rs  user.rs
image/: Cargo.toml
image/src/: errors.rs  lib.rs  service.rs  utils.rs
image/src/storage/: minio.rs
init/minio/: 01_create_user.sh
init/pgsql/: 01_init.sh
migration/: Cargo.toml
migration/src/: lib.rs  m20250325_093802_create_image_table.rs
migrations/: 20250331165255_create_user_table.down.sql  20250331165255_create_user_table.up.sql  20250404082825_create_user_verification_token_table.down.sql  20250404082825_create_user_verification_token_table.up.sql  20250420095039_create_person_table.down.sql  20250420095039_create_person_table.up.sql
person/: Cargo.toml
person/src/: routes.rs
src/: main.rs
src/storage/: minio.rs
src/tests/: image.rs
templates/email/: verification.html
utils/: Cargo.toml
utils/partial_form_codegen/: Cargo.toml
utils/partial_form_codegen/src/: lib.rs
utils/src/: guards.rs  lib.rs  validators.rs
