[package]
name = "blossom_backend_rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "entity",
    "image",
    "migration",
]

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "tls", "json"] }
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
#argon2 = { version = "0.5.3" }

entity = { path = "entity" }
image-service = { path = "image" }
image = { version = "0.25.5", features = ["jpeg", "png"] }

dotenvy = "0.15"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.79.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0.0", features = ["full"] }