[package]
name = "blossom_backend_rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "account",
    "entity",
    "image",
    "utils",
]

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "tls", "json"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }

account = { path = "account" }
image-service = { path = "image" }
image = { version = "0.25.5", features = ["jpeg", "png"] }

dotenvy = "0.15"
aws-sdk-s3 = "1.79.0"

openssl = { version = "0.10.71", features = ["vendored"] }
