[package]
name = "account"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "tls", "json", "uuid"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

jsonwebtoken = "9.3.1"
zxcvbn = "3.1.0"

image-service = { path = "../image" }
image = { version = "0.25.5", features = ["jpeg", "png"] }
aws-sdk-s3 = "1.79.0"


entity = { path = "../entity" }
utils = { path = "../utils" }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
lettre = { version = "0.11.15" }