[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5.3"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
image-service = { path = "../image" }
aws-sdk-s3 = "1.79.0"
