[package]
name = "image-service"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.79.0"
image = { version = "0.25.5", features = ["jpeg", "png"] }
uuid = { version = "1.16.0", features = ["v4"] }
tokio = "1.44.1"