[package]
name = "partial_form_codegen"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full", "fold"] }
proc-macro2 = "1.0.94"

# for doctest
rocket = { version = "0.5.1", features = ["secrets", "tls", "json", "uuid"] }
